# PythonProject18

./: .gitignore  README.md  pyproject.toml
src/: api_class.py  functions.py  json_saver_class.py  main.py  vacancies.json  vacancy_class.py
