[project]
name = "pythonproject18"
version = "0.1.0"
description = ""
authors = [
    {name = "Eugene Evstratev",email = "levipupsik321@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
